# poisson-surface-reconstruction

./: .gitignore  CMakeLists.txt  README.md  build.sh  mexutil.h  poissonRecon.mex.cc
cmake/Modules/: FindMATLAB.cmake
scripts/: build.sh  debug-build.sh  generate-eclipse.sh
src/: CMakeLists.txt  Geometry.h  Ply.h  PlyFile.cpp  PointStream.h  PointStream.inl  PoissonRecon.cpp  PoissonReconLib.cpp  PoissonReconLib.h  SurfaceTrimmer.cpp
