cmake_minimum_required(VERSION 2.8.4)

project(POISSON_RECON)

add_subdirectory(src)

# MATLAB MEX-File config
set(MEX_PATH /usr/local/MATLAB/R2014b/bin/mex)
# set(MEX_PATH /Applications/MATLAB_R2014b.app/bin/mex)

set(CMAKE_CXX_COMPILER ${MEX_PATH})
set(CMAKE_C_COMPILER   ${MEX_PATH})
 
set(CMAKE_SHARED_LIBRARY_SUFFIX .mexa64)
set(CMAKE_SHARED_LIBRARY_PREFIX)
set(CMAKE_SHARED_LIBRARY_CXX_FLAGS)
 
set(CMAKE_CXX_FLAGS "-cxx -largeArrayDims -O CXXFLAGS='$$CXXFLAGS -fPIC -std=c++11'")

set(CMAKE_CXX_COMPILE_OBJECT 
    "<CMAKE_CXX_COMPILER> <DEFINES> <FLAGS> -outdir <OBJECT_DIR> -c <SOURCE>; mv <OBJECT_DIR>/*.o <OBJECT>"
)
 
set(CMAKE_SHARED_LIBRARY_CREATE_CXX_FLAGS)
set(LINK_LIBRARIES ${CORELIBS})

get_property(POISSON_RECON_LIB_FILENAME TARGET poisson_recon_lib PROPERTY LOCATION)

set(CMAKE_CXX_CREATE_SHARED_LIBRARY
    "<CMAKE_CXX_COMPILER> -cxx <LINK_FLAGS> <CMAKE_SHARED_LIBRARY_CREATE_CXX_FLAGS> -output ${POISSON_RECON_SOURCE_DIR}/bin/<TARGET> <OBJECTS> <LINK_LIBRARIES> -L${POISSON_RECON_SOURCE_DIR}/build ${POISSON_RECON_LIB_FILENAME}"
)

set(CMAKE_INSTALL_RPATH "\$ORIGIN")

file(GLOB_RECURSE MEX_INCLUDES "${POISSON_RECON_SOURCE_DIR}/*.mex.cc")

foreach(MEX_INC ${MEX_INCLUDES})
    get_filename_component(MEX_LIB_NAME ${MEX_INC} NAME_WE)
    add_library(${MEX_LIB_NAME} SHARED ${MEX_INC})
    add_dependencies(${MEX_LIB_NAME} poisson_recon_lib)
endforeach()
